Merge conflict and error fixes